--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "@microsoft/signalr": "^7.0.4",
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.5.0",
+    "globalthis": "^1.0.3",
     "solid-js": "^1.5.7",
     "solid-start": "^0.1.0",
-    "undici": "^5.10.0"
+    "undici": "^5.10.0",
+    "webcrypto-shim": "^0.1.7"
   },
   "engines": {
     "node": ">=16"
