--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@solidjs/router": "^0.5.0",
     "bootstrap": "^5.2.3",
     "globalthis": "^1.0.3",
+    "solid-icons": "^1.0.4",
     "solid-js": "^1.5.7",
     "solid-start": "^0.1.0",
+    "solid-toast": "^0.5.0",
     "undici": "^5.10.0",
     "webcrypto-shim": "^0.1.7"
   },
